# molgenis-py-bbmri-eric

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  Jenkinsfile  Pipfile  README.md  bump-version.sh  setup.cfg  sonar-project.properties  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
docs/: conf.py  index.md
scripts/: .gitignore  biobank_pid_assignment.py  example.py  hook.py  sync_DE_qualities.py  test.py
src/molgenis/bbmri_eric/: __init__.py  _cli.py  _enricher.py  _enrichment.py  _model.py  _printer.py  _publisher.py  _stager.py  _utils.py  _validation.py  bbmri_client.py  bbmri_validations.py  categories.py  cli.py  dev.py  enricher.py  eric.py  errors.py  importer.py  model.py  molgenis_utilities.py  nodes.py  pid_manager.py  pid_service.py  printer.py  publication_preparer.py  publisher.py  readme.md  requirements.txt  skeleton.py  stager.py  transformer.py  utils.py  validation.py
tests/: conftest.py  test_categories.py  test_enricher.py  test_eric.py  test_errors.py  test_model.py  test_pid_manager.py  test_pid_service.py  test_printer.py  test_publication_preparer.py  test_publisher.py  test_skeleton.py  test_stager.py  test_transformer.py  test_utils.py  test_validator.py
tests/resources/: node_data.pkl  node_data_pickler.py
