[bumpversion]
commit = True
tag = True
tag_name = {new_version}
current_version = 0.0.1

[metadata]
name = molgenis-py-bbmri-eric
description = Add a short description here!
author = Tommy de Boer
author_email = t.de.boer01@umcg.nl
license = LGPL-3.0-only
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/molgenis/molgenis-py-bbmri-eric
project_urls = 
	Source = https://github.com/molgenis/molgenis-py-bbmri-eric
platforms = any
classifiers = 
	Development Status :: 4 - Beta
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir = 
	=src
python_requires = >=3.6
install_requires = 
	importlib-metadata; python_version<"3.8"
	molgenis-py-client>=2.3.1

[options.packages.find]
where = src
exclude = 
	tests

[options.extras_require]
testing = 
	setuptools
	pytest
	pytest-cov

[options.entry_points]
console_scripts = 
	eric = molgenis.bbmri_eric.eric:run

[tool:pytest]
addopts = 
	--cov molgenis.bbmri_eric --cov-report term-missing
	--verbose
	--junitxml junit.xml
norecursedirs = 
	dist
	build
	.tox
testpaths = tests

[bdist_wheel]
universal = 1

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude = 
	.tox
	build
	dist
	.eggs
	docs/conf.py

[pyscaffold]
version = 4.0.2
package = bbmri_eric
extensions = 
	markdown
	namespace
	pre_commit
namespace = molgenis
